--- a/_static/src/scss/modules/_contact.scss
+++ b/_static/src/scss/modules/_contact.scss
@@ -1,8 +1,9 @@
 @use '../mixin/mixin' as * ;
 
 .contact {
-  padding-top: 11px;
+  padding-top: 59px;
   padding-bottom: 70px;
+  padding-left: 15px;
   max-width: 100%;
   background: transparent linear-gradient(90deg, #05A5FA 0%, #63FBD7 100%, #67FFD6 100%) 0% 0% no-repeat padding-box;
   @include mq(m){
@@ -14,16 +15,21 @@
     color: #fff ;
     text-align: center;
   }
+  &__title {
+    padding-left: 0;
+  }
   &__sub-title {
-    margin-top: 12px;
-    padding-bottom: 36px;
-    padding-left: 8px;
+    margin-top: 2px;
+    padding-bottom: 33px;
+    padding-left: 6px;
 
   }
   &__text {
-    line-height: 1.5;
-    padding-bottom: 44px;
+    line-height: 1.7;
+    padding-bottom: 39px;
     color: #fff;
+    text-align: center;
+
   }
 
 }
@@ -46,28 +52,30 @@
     display: flex;
     flex-direction: column;
     margin-left: 1px;
+
     label {
       padding-bottom: 45px;
       .must {
         font-size: 0.875rem;
         margin-left: 23px;
-        padding: 4px 15px 5px;
+        padding: 4px 16px 5px;
         background-color: #0C449B;
         color: #fff;
         border-radius: 10px;
       }
       .must-second{
-        margin-left: 21px;
+        margin-left: 19px;
         input {
           margin-bottom: 20px;
         }
       }
     }
+
     input,textarea {
       background-color: #EEFBFB;
-
       margin-bottom: 27px;
     }
+
     input {
       max-width: 499px;
       height: 43px;
@@ -79,58 +87,19 @@
   }
 }
 
-
-
-
-// .form-item {
-//   display: flex;
-//   flex-direction: column;
-//   margin-left: 1px;
-
-//   label {
-//     padding-bottom: 45px;
-//     .must {
-//       font-size: 0.875rem;
-//       margin-left: 23px;
-//       padding: 4px 15px 5px;
-//       background-color: #0C449B;
-//       color: #fff;
-//       border-radius: 10px;
-
-//     }
-//     .must-second{
-//       margin-left: 21px;
-
-//       input {
-//         margin-bottom: 20px;
-//       }
-//     }
-//   }
-
-//   input,textarea {
-//     background-color: #EEFBFB;
-
-//     margin-bottom: 27px;
-//   }
-//   input {
-//     max-width: 499px;
-//     height: 43px;
-//   }
-//   textarea {
-//     height: 179px;
-//     resize: none;
-//   }
-// // }
-
 .email {
   padding-top: 1px;
-  input {
-    margin-bottom: 23px;
-  }
+
   label {
     padding-bottom: 45px;
     margin-left: -2px;
   }
+}
+input[id="email"] {
+  margin-bottom: 21px;
+}
+textarea[id="comment"] {
+  margin-bottom: 28px;
 }
 
 .form__message label{
@@ -150,7 +119,7 @@ input[type=checkbox] {
 	width: 20px;
   height: 20px;
   margin-bottom: 4px;
-  margin-right: 8px;
+  margin-right: 6px;
 
 }
 label[for=privacy] {
